--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ html {
 .body {
 width: 100%;
 height: 100%;
+background-color: #2d2a9e;
+background-image: linear-gradient(225deg, #2d2a9e 0%, #00072d 50%, #080071 100%);
 }
 
 .navbar {
@@ -21,7 +23,7 @@ padding-top: 1rem;
 display: flex;
 align-items: center;
 justify-content: center;
-background: rgb(0,0,0);
+
 }
 
 .menu__links {
@@ -48,7 +50,6 @@ position: relative;
 .home {
 width: 100%;
 height: 40rem;
-background: rgb(0,0,0);
 }
 
 .titulo__home {
@@ -100,6 +101,76 @@ transition: opacity 1.5s;
 #slider img.selected {
 opacity: 1;
 }
+.title {
+  color: #fff;
+}
+.title.imc {
+  padding-top: 1rem;
+}
+.perfil {
+  width: fit-content;
+  width: max-content;
+  margin: 4rem auto;
+  font-size: 2.5rem;
+}
+.main__card {
+  width: 300px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid rgba(0 ,0 ,0,0.4);
+  box-shadow: 0 0 50px rgba(255, 255, 255, 0.4);
+  margin-left: 4rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+}
+.form__container {
+  width: 300px;
+  height: 290px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 1rem;
+}
+.form__group {
+  width: auto;
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.form__group.b{
+  display: flex;
+  flex-direction: row;
+}
+.label {
+  color: #fff;
+}
+.input {
+  color: #fff;
+  border-radius: 5px;
+}
+.buttons {
+  width: 100px;
+  padding: .3rem;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  margin: .5rem
+}
+.form__result {
+  width: auto;
+  height: auto;
+  display: flex;
+  padding-top: 1rem;
+  flex-direction: column;
+}
+.result {
+  width: 300px;
+  height: 120px;
+  padding: 0 1rem;
+}
 .icon:hover {
 width: 61px;
 height: 61px;
@@ -118,11 +189,6 @@ display: grid;
 flex-direction: center;
 justify-content: center;
 align-items: center;
-background: rgb(0,0,0);
-background: -moz-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,34,56,1) 100%);
-background: -webkit-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,34,56,1) 100%);
-background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,34,56,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#002238",GradientType=1);
 }
 .h1t {
 color:#fff;
